<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:padding="20dp"
    android:background="@drawable/bg_login">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_splash_transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="Welcome"
        android:textColor="@color/grey"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/tv_register_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="SignUp to start your journey"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/inputEmailSign"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/textfield_costum"
        android:drawableStart="@drawable/baseline_email_focused"
        android:drawablePadding="8dp"
        android:layout_marginTop="20dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_sub_title" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints="username"
        android:background="@drawable/textfield_costum"
        android:drawableStart="@drawable/costum_username"
        android:drawablePadding="8dp"
        android:layout_marginTop="5dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputEmailSign" />

    <EditText
        android:id="@+id/inputPasswordSign"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/textfield_costum"
        android:drawableStart="@drawable/baseline_lock_focused"
        android:drawablePadding="8dp"
        android:layout_marginTop="5dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />


    <EditText
        android:id="@+id/inputConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/textfield_costum"
        android:drawableStart="@drawable/baseline_lock_focused"
        android:drawablePadding="8dp"
        android:layout_marginTop="5dp"
        android:elevation="5dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPasswordSign" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="200dp"
        android:background="@drawable/button_costum"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:textSize="14sp"
        android:text="@string/register_have_account"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        tools:layout_editor_absoluteX="20dp" />

    <ImageView
        android:id="@+id/back_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>